eval_outputs/diff_and_source_code/code_change/third/google/few-shot.log
=== RETURN CODE: 1 ===

=== STDOUT ===
SyntaxError: /Users/johndennehy/Documents/Coding/devops-atu-disruptive-devops-assignment/app/e2e/few-shot.spec.ts: Unterminated template. (16:3)

  14 |   expect(text).toBe(noteBody);
  15 | });
> 16 | ```
     |    ^

   at few-shot.spec.ts:16

  14 |   expect(text).toBe(noteBody);
  15 | });
> 16 | ```
     |   ^

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K

=== STDERR ===

